--- a/index.html
+++ b/index.html
@@ -139,7 +139,19 @@
                         <div class="form-grid">
                             <div class="form-group">
                                 <label for="buildingName">건물명</label>
-                                <input type="text" id="buildingName" placeholder="예: 강남타워" required>
+                                <select id="buildingName" onchange="updateDongTypeOptions()" required>
+                                    <option value="">건물 선택</option>
+                                    <option value="타워더모스트">타워더모스트</option>
+                                    <option value="해링턴타워">해링턴타워</option>
+                                    <option value="KCC하버뷰">KCC하버뷰</option>
+                                </select>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="dongType">동/타입</label>
+                                <select id="dongType" required disabled>
+                                    <option value="">건물을 먼저 선택하세요</option>
+                                </select>
                             </div>
 
                             <div class="form-group">
@@ -188,28 +200,19 @@
                                 <label for="options">옵션</label>
                                 <div class="checkbox-group">
                                     <label class="checkbox-label">
-                                        <input type="checkbox" name="option" value="에어컨"> 에어컨
+                                        <input type="checkbox" id="fullOption" onchange="toggleFullOption()"> <strong>풀옵션</strong>
                                     </label>
                                     <label class="checkbox-label">
-                                        <input type="checkbox" name="option" value="냉장고"> 냉장고
+                                        <input type="checkbox" name="option" value="티비"> 티비
                                     </label>
                                     <label class="checkbox-label">
-                                        <input type="checkbox" name="option" value="세탁기"> 세탁기
+                                        <input type="checkbox" name="option" value="쇼파"> 쇼파
                                     </label>
                                     <label class="checkbox-label">
-                                        <input type="checkbox" name="option" value="전자레인지"> 전자레인지
+                                        <input type="checkbox" name="option" value="블라인드"> 블라인드
                                     </label>
                                     <label class="checkbox-label">
-                                        <input type="checkbox" name="option" value="가스레인지"> 가스레인지
-                                    </label>
-                                    <label class="checkbox-label">
-                                        <input type="checkbox" name="option" value="침대"> 침대
-                                    </label>
-                                    <label class="checkbox-label">
-                                        <input type="checkbox" name="option" value="책상"> 책상
-                                    </label>
-                                    <label class="checkbox-label">
-                                        <input type="checkbox" name="option" value="옷장"> 옷장
+                                        <input type="checkbox" name="option" value="커튼"> 커튼
                                     </label>
                                 </div>
                             </div>
@@ -247,6 +250,12 @@
                         <input type="text" id="searchInput" placeholder="매물 검색...">
                     </div>
                     <div class="filter-box">
+                        <select id="filterBuilding" onchange="onBuildingChange()">
+                            <option value="">전체 건물</option>
+                        </select>
+                        <select id="filterDongType" style="display:none;">
+                            <option value="">동/타입 선택</option>
+                        </select>
                         <select id="filterMoveIn">
                             <option value="">전체 전입</option>
                             <option value="전입">전입</option>
@@ -268,6 +277,7 @@
                                 <tr>
                                     <th>번호</th>
                                     <th>건물명</th>
+                                    <th>동/타입</th>
                                     <th>호수</th>
                                     <th>보증금</th>
                                     <th>월세</th>
@@ -280,7 +290,7 @@
                             </thead>
                             <tbody id="propertiesTableBody">
                                 <tr>
-                                    <td colspan="10" class="empty-row">등록된 매물이 없습니다.</td>
+                                    <td colspan="11" class="empty-row">등록된 매물이 없습니다.</td>
                                 </tr>
                             </tbody>
                         </table>
