--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
                         <span>통계</span>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="#" data-tab="account">
+                        <i class="fas fa-user-cog"></i>
+                        <span>계정 관리</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" onclick="logout(); return false;">
+                        <i class="fas fa-sign-out-alt"></i>
+                        <span>로그아웃</span>
+                    </a>
+                </li>
             </ul>
         </nav>
     </aside>
@@ -298,6 +310,96 @@
                     <!-- 모바일 카드 뷰 -->
                     <div class="properties-cards mobile-view" id="propertiesCards">
                         <div class="empty-message">등록된 매물이 없습니다.</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 계정 관리 탭 -->
+        <section class="content-tab" id="account">
+            <div class="page-header">
+                <h2>계정 관리</h2>
+                <p>관리자 계정 관리 및 비밀번호 변경</p>
+            </div>
+
+            <!-- 내 비밀번호 변경 -->
+            <div class="card" style="margin-bottom: 30px;">
+                <div class="card-header">
+                    <h3>내 비밀번호 변경</h3>
+                </div>
+                <div class="card-body">
+                    <form id="changePasswordForm" style="max-width: 500px;">
+                        <div class="form-grid" style="grid-template-columns: 1fr;">
+                            <div class="form-group">
+                                <label for="currentPassword">현재 비밀번호</label>
+                                <input type="password" id="currentPassword" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="newPassword">새 비밀번호</label>
+                                <input type="password" id="newPassword" required minlength="4">
+                            </div>
+                            <div class="form-group">
+                                <label for="confirmPassword">새 비밀번호 확인</label>
+                                <input type="password" id="confirmPassword" required minlength="4">
+                            </div>
+                        </div>
+                        <div class="form-actions">
+                            <button type="submit" class="btn btn-primary">
+                                <i class="fas fa-key"></i> 비밀번호 변경
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <!-- 계정 추가 -->
+            <div class="card" style="margin-bottom: 30px;">
+                <div class="card-header">
+                    <h3>새 계정 추가</h3>
+                </div>
+                <div class="card-body">
+                    <form id="addAccountForm" style="max-width: 500px;">
+                        <div class="form-grid" style="grid-template-columns: 1fr;">
+                            <div class="form-group">
+                                <label for="newUsername">아이디</label>
+                                <input type="text" id="newUsername" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="newAccountPassword">비밀번호</label>
+                                <input type="password" id="newAccountPassword" required minlength="4">
+                            </div>
+                        </div>
+                        <div class="form-actions">
+                            <button type="submit" class="btn btn-success">
+                                <i class="fas fa-user-plus"></i> 계정 추가
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <!-- 계정 목록 -->
+            <div class="card">
+                <div class="card-header">
+                    <h3>전체 계정 목록</h3>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="properties-table">
+                            <thead>
+                                <tr>
+                                    <th>번호</th>
+                                    <th>아이디</th>
+                                    <th>생성일</th>
+                                    <th>관리</th>
+                                </tr>
+                            </thead>
+                            <tbody id="accountsTableBody">
+                                <tr>
+                                    <td colspan="4" class="empty-row">계정 정보를 불러오는 중...</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
