--- a/index.html
+++ b/index.html
@@ -19,15 +19,11 @@
             </div>
         </div>
         <div class="header-right">
-            <div class="notification">
-                <i class="fas fa-bell"></i>
-                <span class="badge">3</span>
-            </div>
             <div class="user-profile">
                 <div class="user-avatar">
                     <i class="fas fa-user-circle"></i>
                 </div>
-                <span>관리자</span>
+                <span id="adminName">관리자</span>
             </div>
         </div>
     </header>
@@ -322,30 +318,34 @@
                 <p>관리자 계정 관리 및 비밀번호 변경</p>
             </div>
 
-            <!-- 내 비밀번호 변경 -->
+            <!-- 내 정보 변경 -->
             <div class="card" style="margin-bottom: 30px;">
                 <div class="card-header">
-                    <h3>내 비밀번호 변경</h3>
+                    <h3>내 정보 변경</h3>
                 </div>
                 <div class="card-body">
                     <form id="changePasswordForm" style="max-width: 500px;">
                         <div class="form-grid" style="grid-template-columns: 1fr;">
                             <div class="form-group">
+                                <label for="updateName">성명</label>
+                                <input type="text" id="updateName" required>
+                            </div>
+                            <div class="form-group">
                                 <label for="currentPassword">현재 비밀번호</label>
                                 <input type="password" id="currentPassword" required>
                             </div>
                             <div class="form-group">
-                                <label for="newPassword">새 비밀번호</label>
-                                <input type="password" id="newPassword" required minlength="4">
+                                <label for="newPassword">새 비밀번호 (변경하지 않으려면 비워두세요)</label>
+                                <input type="password" id="newPassword" minlength="4">
                             </div>
                             <div class="form-group">
                                 <label for="confirmPassword">새 비밀번호 확인</label>
-                                <input type="password" id="confirmPassword" required minlength="4">
+                                <input type="password" id="confirmPassword" minlength="4">
                             </div>
                         </div>
                         <div class="form-actions">
                             <button type="submit" class="btn btn-primary">
-                                <i class="fas fa-key"></i> 비밀번호 변경
+                                <i class="fas fa-save"></i> 정보 변경
                             </button>
                         </div>
                     </form>
@@ -367,6 +367,10 @@
                             <div class="form-group">
                                 <label for="newAccountPassword">비밀번호</label>
                                 <input type="password" id="newAccountPassword" required minlength="4">
+                            </div>
+                            <div class="form-group">
+                                <label for="newAccountName">성명</label>
+                                <input type="text" id="newAccountName" required>
                             </div>
                         </div>
                         <div class="form-actions">
@@ -390,13 +394,14 @@
                                 <tr>
                                     <th>번호</th>
                                     <th>아이디</th>
+                                    <th>성명</th>
                                     <th>생성일</th>
                                     <th>관리</th>
                                 </tr>
                             </thead>
                             <tbody id="accountsTableBody">
                                 <tr>
-                                    <td colspan="4" class="empty-row">계정 정보를 불러오는 중...</td>
+                                    <td colspan="5" class="empty-row">계정 정보를 불러오는 중...</td>
                                 </tr>
                             </tbody>
                         </table>
