--- a/login.html
+++ b/login.html
@@ -12,17 +12,165 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #1a1d24 0%, #2d3139 50%, #1a1d24 100%);
             padding: 20px;
+            position: relative;
+        }
+
+        .login-container::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: 
+                radial-gradient(circle at 20% 50%, rgba(71, 167, 245, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 80% 80%, rgba(102, 126, 234, 0.1) 0%, transparent 50%);
+            pointer-events: none;
         }
 
         .login-box {
-            background-color: var(--bg-card);
+            background-color: rgba(39, 44, 52, 0.95);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(71, 167, 245, 0.2);
             border-radius: 16px;
             padding: 40px;
             width: 100%;
             max-width: 400px;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
+            position: relative;
+            z-index: 1;
+        }
+
+        /* CMD 스타일 환영 창 */
+        .cmd-window {
+            background-color: #0c0c0c;
+            border: 1px solid #333;
+            border-radius: 8px;
+            padding: 15px;
+            margin-bottom: 25px;
+            font-family: 'Courier New', Consolas, monospace;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+        }
+
+        .cmd-header {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 10px;
+            padding-bottom: 8px;
+            border-bottom: 1px solid #333;
+        }
+
+        .cmd-title {
+            color: #ffffff;
+            font-size: 12px;
+            flex: 1;
+        }
+
+        .cmd-buttons {
+            display: flex;
+            gap: 6px;
+        }
+
+        .cmd-btn {
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+        }
+
+        .cmd-btn.minimize {
+            background-color: #3db54a;
+        }
+
+        .cmd-btn.maximize {
+            background-color: #f5bd4f;
+        }
+
+        .cmd-btn.close {
+            background-color: #fc605c;
+        }
+
+        .cmd-content {
+            color: #0dbc79;
+            font-size: 13px;
+            line-height: 1.8;
+            min-height: 80px;
+        }
+
+        .cmd-line {
+            display: block;
+            margin-bottom: 2px;
+        }
+
+        .cmd-prompt {
+            color: #0dbc79;
+        }
+
+        .cmd-text {
+            color: #cccccc;
+            display: inline-block;
+            overflow: hidden;
+            white-space: nowrap;
+            border-right: 2px solid #0dbc79;
+            animation: typing-line1 2s steps(30, end) forwards, blink-caret 0.75s step-end infinite;
+        }
+
+        .cmd-line-indent {
+            display: inline-block;
+            padding-left: 30px;
+            color: #cccccc;
+            overflow: hidden;
+            white-space: nowrap;
+            border-right: 2px solid #0dbc79;
+            opacity: 0;
+            animation: 
+                show-line2 0s 2s forwards,
+                typing-line2 2s 2s steps(25, end) forwards,
+                blink-caret 0.75s 2s step-end infinite;
+        }
+
+        @keyframes typing-line1 {
+            from {
+                width: 0;
+            }
+            to {
+                width: 100%;
+            }
+        }
+
+        @keyframes typing-line2 {
+            from {
+                width: 0;
+            }
+            to {
+                width: 100%;
+            }
+        }
+
+        @keyframes show-line2 {
+            to {
+                opacity: 1;
+            }
+        }
+
+        @keyframes typing {
+            from {
+                width: 0;
+            }
+            to {
+                width: 100%;
+            }
+        }
+
+        @keyframes blink-caret {
+            from, to {
+                border-color: transparent;
+            }
+            50% {
+                border-color: #0dbc79;
+            }
         }
 
         .login-logo {
@@ -85,7 +233,7 @@
         .login-btn {
             width: 100%;
             padding: 15px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #47a7f5 0%, #667eea 100%);
             color: white;
             border: none;
             border-radius: 8px;
@@ -94,11 +242,28 @@
             cursor: pointer;
             transition: all 0.3s;
             margin-top: 10px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .login-btn::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+            transition: left 0.5s;
+        }
+
+        .login-btn:hover::before {
+            left: 100%;
         }
 
         .login-btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 10px 30px rgba(71, 167, 245, 0.4);
         }
 
         .login-btn:disabled {
@@ -125,6 +290,27 @@
 <body>
     <div class="login-container">
         <div class="login-box">
+            <!-- CMD 스타일 환영 창 -->
+            <div class="cmd-window">
+                <div class="cmd-header">
+                    <div class="cmd-buttons">
+                        <div class="cmd-btn close"></div>
+                        <div class="cmd-btn minimize"></div>
+                        <div class="cmd-btn maximize"></div>
+                    </div>
+                    <div class="cmd-title">Administrator - Command Prompt</div>
+                </div>
+                <div class="cmd-content">
+                    <div class="cmd-line">
+                        <span class="cmd-prompt">C:\></span>
+                        <span class="cmd-text">Welcome to 모스트품격부동산 관리자</span>
+                    </div>
+                    <div class="cmd-line">
+                        <span class="cmd-line-indent">페이지에 오신걸 환영합니다</span>
+                    </div>
+                </div>
+            </div>
+
             <div class="login-logo">
                 <img src="images/logo.png" alt="로고">
                 <h1>매물 관리 시스템</h1>
@@ -204,6 +390,7 @@
 
                 // 로그인 정보 저장
                 localStorage.setItem('adminUser', username);
+                localStorage.setItem('adminName', data.name);
                 
                 // 메인 페이지로 이동
                 window.location.href = 'index.html';
