--- a/index.html
+++ b/index.html
@@ -252,14 +252,14 @@
             </div>
 
             <div class="card">
-                <div class="card-header" style="flex-wrap: wrap; gap: 15px;">
-                    <div style="display: flex; gap: 10px; flex: 1; min-width: 300px;">
+                <div class="card-header list-header">
+                    <div class="search-and-export">
                         <div class="search-box">
                             <i class="fas fa-search"></i>
                             <input type="text" id="searchInput" placeholder="매물 검색...">
                         </div>
-                        <button class="btn btn-success" onclick="exportToExcel()" title="엑셀 다운로드" style="white-space: nowrap;">
-                            <i class="fas fa-file-excel"></i> 엑셀 다운로드
+                        <button class="btn btn-success excel-btn" onclick="exportToExcel()" title="엑셀 다운로드">
+                            <i class="fas fa-file-excel"></i> <span class="btn-text">엑셀 다운로드</span>
                         </button>
                     </div>
                     <div class="filter-box">
