--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
     <div class="modal" id="propertyModal">
         <div class="modal-content">
             <div class="modal-header">
-                <h3>매물 상세 정보</h3>
+                <h3 id="modalTitle">매물 정보 수정</h3>
                 <button class="modal-close" onclick="closeModal()">
                     <i class="fas fa-times"></i>
                 </button>
