--- a/index.html
+++ b/index.html
@@ -141,7 +141,39 @@
                 <p>새로운 매물 정보를 등록합니다</p>
             </div>
 
+            <!-- 엑셀 대량 등록 -->
+            <div class="card" style="margin-bottom: 20px;">
+                <div class="card-header">
+                    <h3><i class="fas fa-file-excel"></i> 엑셀 파일로 대량 등록</h3>
+                </div>
+                <div class="card-body">
+                    <div style="margin-bottom: 20px;">
+                        <p style="color: var(--text-secondary); margin-bottom: 15px;">
+                            엑셀 샘플 파일을 다운로드하여 작성 후 업로드하면 여러 매물을 한 번에 등록할 수 있습니다.
+                        </p>
+                        <button type="button" class="btn btn-primary" onclick="downloadExcelSample()">
+                            <i class="fas fa-download"></i> 엑셀 샘플 다운로드
+                        </button>
+                    </div>
+                    <div style="border-top: 1px solid var(--border-color); padding-top: 20px;">
+                        <div class="form-group">
+                            <label for="excelFileInput">엑셀 파일 업로드</label>
+                            <input type="file" id="excelFileInput" accept=".xlsx, .xls" style="display: none;" onchange="handleExcelUpload(event)">
+                            <button type="button" class="btn btn-success" onclick="document.getElementById('excelFileInput').click()">
+                                <i class="fas fa-upload"></i> 엑셀 파일 선택
+                            </button>
+                            <span id="fileName" style="margin-left: 15px; color: var(--text-secondary);"></span>
+                        </div>
+                        <div id="uploadResult" style="margin-top: 15px;"></div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 개별 등록 폼 -->
             <div class="card">
+                <div class="card-header">
+                    <h3><i class="fas fa-plus-circle"></i> 개별 매물 등록</h3>
+                </div>
                 <div class="card-body">
                     <form id="propertyForm">
                         <div class="form-grid">
