--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <form id="propertyForm">
                         <div class="form-grid">
                             <div class="form-group">
-                                <label for="buildingName">건물명</label>
+                                <label for="buildingName">건물명 <span style="color: var(--danger-color);">*</span></label>
                                 <select id="buildingName" onchange="updateDongTypeOptions()" required>
                                     <option value="">건물 선택</option>
                                     <option value="타워더모스트">타워더모스트</option>
@@ -188,7 +188,7 @@
                             </div>
 
                             <div class="form-group">
-                                <label for="dongType">동/타입</label>
+                                <label for="dongType">동/타입 <span style="color: var(--danger-color);">*</span></label>
                                 <select id="dongType" required disabled>
                                     <option value="">건물을 먼저 선택하세요</option>
                                 </select>
@@ -196,17 +196,17 @@
 
                             <div class="form-group">
                                 <label for="roomNumber">호수</label>
-                                <input type="text" id="roomNumber" placeholder="예: 1503" required>
+                                <input type="text" id="roomNumber" placeholder="예: 1503">
                             </div>
 
                             <div class="form-group">
                                 <label for="deposit">보증금 (만원)</label>
-                                <input type="number" id="deposit" placeholder="예: 5000" required>
+                                <input type="number" id="deposit" placeholder="예: 5000" value="0">
                             </div>
 
                             <div class="form-group">
                                 <label for="monthlyRent">월세 (만원)</label>
-                                <input type="number" id="monthlyRent" placeholder="예: 50" required>
+                                <input type="number" id="monthlyRent" placeholder="예: 50" value="0">
                             </div>
 
                             <div class="form-group">
@@ -216,15 +216,15 @@
 
                             <div class="form-group">
                                 <label for="moveIn">전입유무</label>
-                                <select id="moveIn" required>
-                                    <option value="전입">전입</option>
+                                <select id="moveIn">
                                     <option value="미전입">미전입</option>
+                                    <option value="전입">전입</option>
                                 </select>
                             </div>
 
                             <div class="form-group">
                                 <label for="status">상태</label>
-                                <select id="status" required>
+                                <select id="status">
                                     <option value="공실">공실</option>
                                     <option value="임대중">임대중</option>
                                     <option value="계약대기">계약대기</option>
@@ -233,7 +233,7 @@
 
                             <div class="form-group">
                                 <label for="contact">연락처</label>
-                                <input type="tel" id="contact" placeholder="예: 010-1234-5678" required>
+                                <input type="tel" id="contact" placeholder="예: 010-1234-5678">
                             </div>
 
                             <div class="form-group full-width">
@@ -243,16 +243,28 @@
                                         <input type="checkbox" id="fullOption" onchange="toggleFullOption()"> <strong>풀옵션</strong>
                                     </label>
                                     <label class="checkbox-label">
-                                        <input type="checkbox" name="option" value="티비"> 티비
+                                        <input type="checkbox" name="option" value="냉장고"> 냉장고
                                     </label>
                                     <label class="checkbox-label">
-                                        <input type="checkbox" name="option" value="쇼파"> 쇼파
+                                        <input type="checkbox" name="option" value="세탁기"> 세탁기
                                     </label>
                                     <label class="checkbox-label">
-                                        <input type="checkbox" name="option" value="블라인드"> 블라인드
+                                        <input type="checkbox" name="option" value="에어컨"> 에어컨
                                     </label>
                                     <label class="checkbox-label">
-                                        <input type="checkbox" name="option" value="커튼"> 커튼
+                                        <input type="checkbox" name="option" value="인덕션"> 인덕션
+                                    </label>
+                                    <label class="checkbox-label">
+                                        <input type="checkbox" name="option" value="전자레인지"> 전자레인지
+                                    </label>
+                                    <label class="checkbox-label">
+                                        <input type="checkbox" name="option" value="책상"> 책상
+                                    </label>
+                                    <label class="checkbox-label">
+                                        <input type="checkbox" name="option" value="침대"> 침대
+                                    </label>
+                                    <label class="checkbox-label">
+                                        <input type="checkbox" name="option" value="옷장"> 옷장
                                     </label>
                                 </div>
                             </div>
