--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a href="#" data-tab="history">
+                        <i class="fas fa-history"></i>
+                        <span>과거 내역</span>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="#" data-tab="stats">
                         <i class="fas fa-chart-line"></i>
                         <span>통계</span>
@@ -355,6 +361,76 @@
                     <!-- 모바일 카드 뷰 -->
                     <div class="properties-cards mobile-view" id="propertiesCards">
                         <div class="empty-message">등록된 매물이 없습니다.</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 과거 내역 탭 (삭제된 매물) -->
+        <section class="content-tab" id="history">
+            <div class="page-header">
+                <h2>과거 내역</h2>
+                <p>삭제된 매물 목록을 확인합니다</p>
+            </div>
+
+            <div class="card">
+                <div class="card-header list-header">
+                    <div class="search-and-export">
+                        <div class="search-box">
+                            <i class="fas fa-search"></i>
+                            <input type="text" id="historySearchInput" placeholder="삭제된 매물 검색...">
+                        </div>
+                    </div>
+                    <div class="filter-box">
+                        <select id="historyFilterBuilding" onchange="onHistoryBuildingChange()">
+                            <option value="">전체 건물</option>
+                        </select>
+                        <select id="historyFilterDongType">
+                            <option value="">전체 동/타입</option>
+                        </select>
+                        <select id="historyFilterMoveIn">
+                            <option value="">전체 전입</option>
+                            <option value="전입">전입</option>
+                            <option value="미전입">미전입</option>
+                        </select>
+                        <select id="historyFilterStatus">
+                            <option value="">전체 상태</option>
+                            <option value="공실">공실</option>
+                            <option value="임대중">임대중</option>
+                            <option value="계약대기">계약대기</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <!-- 데스크톱 테이블 뷰 -->
+                    <div class="table-responsive desktop-view">
+                        <table class="properties-table">
+                            <thead>
+                                <tr>
+                                    <th>번호</th>
+                                    <th>건물명</th>
+                                    <th>동/타입</th>
+                                    <th>호수</th>
+                                    <th>보증금</th>
+                                    <th>월세</th>
+                                    <th>전입유무</th>
+                                    <th>상태</th>
+                                    <th>연락처</th>
+                                    <th>등록일</th>
+                                    <th>삭제일</th>
+                                    <th>관리</th>
+                                </tr>
+                            </thead>
+                            <tbody id="historyTableBody">
+                                <tr>
+                                    <td colspan="12" class="empty-row">삭제된 매물이 없습니다.</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <!-- 모바일 카드 뷰 -->
+                    <div class="properties-cards mobile-view" id="historyCards">
+                        <div class="empty-message">삭제된 매물이 없습니다.</div>
                     </div>
                 </div>
             </div>
