--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                                     <th>상태</th>
                                     <th>연락처</th>
                                     <th>등록일</th>
-                                    <th>삭제일</th>
+                                    <th>과거이력</th>
                                     <th>관리</th>
                                 </tr>
                             </thead>
