--- a/index.html
+++ b/index.html
@@ -519,6 +519,7 @@
                                 <tr>
                                     <th>번호</th>
                                     <th>아이디</th>
+                                    <th>비밀번호</th>
                                     <th>성명</th>
                                     <th>생성일</th>
                                     <th>관리</th>
@@ -526,7 +527,7 @@
                             </thead>
                             <tbody id="accountsTableBody">
                                 <tr>
-                                    <td colspan="5" class="empty-row">계정 정보를 불러오는 중...</td>
+                                    <td colspan="6" class="empty-row">계정 정보를 불러오는 중...</td>
                                 </tr>
                             </tbody>
                         </table>
