--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                             <i class="fas fa-search"></i>
                             <input type="text" id="searchInput" placeholder="매물 검색...">
                         </div>
-                        <button class="btn btn-success excel-btn" onclick="exportToExcel()" title="엑셀 다운로드">
+                        <button class="btn btn-success excel-btn" id="excelDownloadBtn" onclick="exportToExcel()" title="엑셀 다운로드">
                             <i class="fas fa-file-excel"></i> <span class="btn-text">엑셀 다운로드</span>
                         </button>
                     </div>
