--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@
                                 <div class="radio-group" style="display: flex; gap: 20px; margin-top: 8px;">
                                     <label class="radio-label" style="display: flex; align-items: center; gap: 5px;">
                                         <input type="radio" name="shortTermAvailable" value="N" checked onchange="toggleShortTermRent()">
-                                        <span>N</span>
+                                        <span>X</span>
                                     </label>
                                     <label class="radio-label" style="display: flex; align-items: center; gap: 5px;">
                                         <input type="radio" name="shortTermAvailable" value="Y" onchange="toggleShortTermRent()">
-                                        <span>Y</span>
+                                        <span>O</span>
                                     </label>
                                 </div>
                             </div>
