--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                                     <option value="해링턴타워">해링턴타워</option>
                                     <option value="KCC하버뷰">KCC하버뷰</option>
                                     <option value="청일디오브">청일디오브</option>
+                                    <option value="테라스타오션">테라스타오션</option>
                                 </select>
                             </div>
 
